# OM1

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  README_SMARTFARM.md  a commit hanya file yang kita fix secara manual  asr_local_results.csv  asr_wrapper.py  asr_ws_autoprobe.py  conftest.py  drone_mqtt_listener.py  iot_listener.py  latest_position.json  package-lock.json  package.json  pr-smartfarm_clean.patch  pyproject.toml  record_demo.sh  simulate_multi_day_data.py  test_image.jpg:Zone.Identifier  touch  ws_asr_auto.py  ws_asr_binary_only.py  ws_asr_google_ws.py  ws_asr_handshake_root.py  ws_asr_json_stream.py  ws_asr_min.py  ws_asr_ok.py  ws_asr_probe_two_styles.py  ws_asr_single_root.py  ws_asr_single_root_end.py  ws_asr_single_root_min.py  ws_asr_stream.py  ws_asr_stream_hybrid.py  ws_asr_stream_om1.py  ws_asr_stream_root.py  ws_asr_stream_root_every.py  ws_asr_stream_root_flush.py  ws_asr_stream_root_lang.py  ws_asr_stream_root_langfirst.py  (+17 more)
.github/: PULL_REQUEST_TEMPLATE.md
bridge/ros2_nodes/: Dockerfile  gps_continuous.py  package.xml  ros2_mavsdk_bridge.py  setup.py  test_bridge_integration.py
bridge/ros2_nodes/smartfarm_ros2_nodes/: camera_driver.py  gps_driver.py  multispectral_driver.py  sprayer_controller.py
bridge/ros2_nodes/smartfarm_ros2_nodes/mavlink_bridge/: mavlink_bridge.py
config/: unitree_g1_humanoid.json5  unitree_go2_autonomy_sim.json5  unitree_go2_modes.json5
demo/: README.md
examples/: run_mistral_demo.sh
frontend/: next.config.js  package-lock.json  package.json
prisma/: schema.prisma
providers/: __init__.py  (+3 more)
(+244 files in other folders)
